# pulseaudio

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  features.cmake  pulseaudio.qbs
.github/workflows/: build.yml
.reuse/: dep5
.travis/: build.sh
.tx/: config  sources.json
cmake/: FindLibpulse.cmake  FindPulseAudio.cmake
scripts/: txpull.sh  txpush.sh
src/imports/pulseaudio/: CMakeLists.txt  VolumeControl.qml  plugin.cpp  pulseaudio.qbs  qmldir
src/imports/pulseaudio/qpulseaudio/: context.cpp  debug.cpp  pulseaudio.cpp
src/indicators/pulseaudio/: CMakeLists.txt  metadata.desktop  metadata.desktop.in  pulseaudio.qbs
src/indicators/pulseaudio/contents/: MprisItem.qml  VolumeSlider.qml  main.qml
src/indicators/pulseaudio/translations/: metadata_fr.desktop  metadata_id.desktop  metadata_lt.desktop  metadata_pt_BR.desktop  metadata_tr.desktop  metadata_zh_CN.desktop  metadata_zh_TW.desktop  pulseaudio.ts  pulseaudio_da.ts  pulseaudio_lt.ts  pulseaudio_pt.ts  pulseaudio_tr.ts  pulseaudio_zh_CN.ts
src/settings/pulseaudio/: CMakeLists.txt  metadata.desktop  metadata.desktop.in
src/settings/pulseaudio/contents/: AppsPage.qml  InputPage.qml  OutputPage.qml  SinkDelegate.qml  StreamDelegate.qml  VolumePage.qml  VolumeSlider.qml  main.qml
src/settings/pulseaudio/translations/: metadata_ca.desktop  metadata_da.desktop  metadata_de.desktop  metadata_el.desktop  metadata_es.desktop  metadata_fr.desktop  metadata_id.desktop  metadata_it.desktop  metadata_lt.desktop  metadata_nl.desktop  metadata_pl.desktop  metadata_pt.desktop  metadata_pt_BR.desktop  metadata_ru.desktop  metadata_tr.desktop  metadata_zh_CN.desktop  metadata_zh_TW.desktop  pulseaudio.ts  pulseaudio_ca.ts  pulseaudio_da.ts  pulseaudio_es.ts  pulseaudio_es_MX.ts  pulseaudio_fr.ts  pulseaudio_id.ts  pulseaudio_ko.ts  pulseaudio_lt.ts  pulseaudio_nl.ts  pulseaudio_pl.ts  pulseaudio_pt_BR.ts  pulseaudio_pt_PT.ts  pulseaudio_ru.ts  pulseaudio_tr.ts  pulseaudio_zh_CN.ts  pulseaudio_zh_TW.ts
src/statusarea/pulseaudio/: CMakeLists.txt  metadata.desktop  metadata.desktop.in
src/statusarea/pulseaudio/contents/: MprisItem.qml  VolumeSlider.qml  main.qml
translations/indicator/: metadata_da.desktop  metadata_es_419.desktop  metadata_lt.desktop  metadata_pl.desktop  metadata_pt.desktop  metadata_ru.desktop  metadata_tr.desktop  metadata_zh_TW.desktop  pulseaudio.ts  pulseaudio_fr.ts  pulseaudio_he.ts  pulseaudio_id.ts  pulseaudio_it_IT.ts  pulseaudio_pl.ts  pulseaudio_pt_BR.ts  pulseaudio_ru.ts  pulseaudio_ru_RU.ts  pulseaudio_zh_CN.ts  pulseaudio_zh_TW.ts
translations/indicator/metadata/: da.po  es_419.po  fr.po  hye.po  id.po  it_IT.po  lt.po  metadata.pot  pl.po  pt.po  pt_BR.po  ru.po  ru_RU.po  tr.po  zh_CN.po  zh_TW.po
translations/settings/: metadata_ca.desktop  metadata_da.desktop  metadata_el.desktop  metadata_es_419.desktop  metadata_es_MX.desktop  metadata_id.desktop  metadata_nl.desktop  metadata_pt_BR.desktop  metadata_pt_PT.desktop  metadata_zh_CN.desktop  metadata_zh_TW.desktop  pulseaudio.ts  pulseaudio_da.ts  pulseaudio_de.ts  pulseaudio_el.ts  pulseaudio_es_419.ts  pulseaudio_fr.ts  pulseaudio_he.ts  pulseaudio_hye.ts  pulseaudio_id.ts  pulseaudio_it.ts  pulseaudio_it_IT.ts  pulseaudio_ja.ts  pulseaudio_lt.ts  pulseaudio_pl.ts  pulseaudio_pt.ts  pulseaudio_pt_BR.ts  pulseaudio_ru.ts  pulseaudio_ru_RU.ts  pulseaudio_tr.ts  pulseaudio_zh_CN.ts  pulseaudio_zh_TW.ts
translations/settings/metadata/: ca.po  da.po  de.po  el.po  es.po  es_419.po  es_MX.po  fr.po  he.po  hye.po  id.po  it.po  it_IT.po  ja.po  ko.po  lt.po  metadata.pot  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  ru_RU.po  tr.po  zh_CN.po  zh_TW.po
translations/statusarea/: pulseaudio.ts  pulseaudio_da.ts  pulseaudio_de.ts  pulseaudio_es_419.ts  pulseaudio_fr.ts  pulseaudio_he.ts  pulseaudio_hye.ts  pulseaudio_id.ts  pulseaudio_it_IT.ts  pulseaudio_lt.ts  pulseaudio_pl.ts  pulseaudio_pt.ts  pulseaudio_pt_BR.ts  pulseaudio_ru.ts  pulseaudio_ru_RU.ts  pulseaudio_tr.ts  pulseaudio_zh_CN.ts  pulseaudio_zh_TW.ts
translations/statusarea/metadata/: de.po  fr.po  he.po  it_IT.po  lt.po  pt.po  pt_BR.po  ru_RU.po  tr.po  zh_CN.po  zh_TW.po
