find_package(PulseAudio REQUIRED)

liri_add_qml_plugin(pulseaudio
    MODULE_PATH
        "Liri/PulseAudio"
    VERSION
        "1.0"
    SOURCES
        plugin.cpp
        qpulseaudio/card.cpp
        qpulseaudio/card.h
        qpulseaudio/client.cpp
        qpulseaudio/client.h
        qpulseaudio/context.cpp
        qpulseaudio/context.h
        qpulseaudio/debug.cpp
        qpulseaudio/debug.h
        qpulseaudio/device.cpp
        qpulseaudio/device.h
        qpulseaudio/maps.cpp
        qpulseaudio/maps.h
        qpulseaudio/operation.cpp
        qpulseaudio/operation.h
        qpulseaudio/port.cpp
        qpulseaudio/port.h
        qpulseaudio/profile.cpp
        qpulseaudio/profile.h
        qpulseaudio/pulseaudio.cpp
        qpulseaudio/pulseaudio.h
        qpulseaudio/pulseobject.cpp
        qpulseaudio/pulseobject.h
        qpulseaudio/ref.cpp
        qpulseaudio/ref.h
        qpulseaudio/server.cpp
        qpulseaudio/server.h
        qpulseaudio/sink.cpp
        qpulseaudio/sink.h
        qpulseaudio/sinkinput.cpp
        qpulseaudio/sinkinput.h
        qpulseaudio/source.cpp
        qpulseaudio/source.h
        qpulseaudio/sourceoutput.cpp
        qpulseaudio/sourceoutput.h
        qpulseaudio/stream.cpp
        qpulseaudio/stream.h
        qpulseaudio/streamrestore.cpp
        qpulseaudio/streamrestore.h
        qpulseaudio/volumeobject.cpp
        qpulseaudio/volumeobject.h
    INCLUDE_DIRECTORIES
        "${CMAKE_CURRENT_SOURCE_DIR}/qpulseaudio"
    QML_FILES
        VolumeControl.qml
        qmldir
    #DEFINES
        #QT_NO_CAST_FROM_ASCII
        #QT_NO_FOREACH
    LIBRARIES
        PkgConfig::PulseAudio
)
